Ripple update from LibUI changes and README update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,17 @@ project(libui_win C CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_BUILD_TYPE Debug)
 
-file(GLOB_RECURSE SOURCE_FILES src/*.cpp inc/*.h)
+file(GLOB_RECURSE SOURCE_FILES src/adapters/*.cpp inc/adapters/*.h)
+set(EXE_FILES
+        ${SOURCE_FILES}
+        inc/simple_menu.h
+        src/main.cpp
+        src/simple_menu.cpp)
 
 include_directories(../libui/inc)
 include_directories(inc src)
 
-add_executable(gui_win ${SOURCE_FILES})
+add_executable(gui_win ${EXE_FILES})
 set_target_properties(gui_win PROPERTIES LINK_FLAGS ${PROJECT_SOURCE_DIR}/manifest.res )
 target_link_libraries(gui_win ${PROJECT_SOURCE_DIR}/lib/libui.a)
 
